crates/toml/tests/snapshots/invalid/key/newline-06.stderr
TOML parse error at line 2, column 2
  |
2 | 1
  |  ^
key with no value, expected `=`
